--- a/laravel/nixpacks.toml
+++ b/laravel/nixpacks.toml
@@ -144,7 +144,7 @@ http {
         charset utf-8;
      
         location / {
-            try_files $uri $uri/ ${NIXPACKS_PHP_FALLBACK_PATH:-/index.php}?$query_string;
+            try_files $uri $uri/ ${NIXPACKS_PHP_FALLBACK_PATH:/index.php}?$query_string;
         }
      
         location = /favicon.ico { access_log off; log_not_found off; }
